# pyAGADIR

./: LICENSE  README.md  environment.yml  residue_scores.ipynb  setup.cfg  setup.py  test.ipynb  test_run.py  upload.sh
pyagadir/: __init__.py  energies.py  models.py  utils.py
pyagadir/data/: README.md  pka_values.tsv  table2.csv  table3a.csv  table3b.csv  table4a.csv  table4b.csv  table_1_lacroix.tsv  table_2_lacroix.tsv  table_3_lacroix.tsv  table_4a_lacroix.tsv  table_4b_lacroix.tsv  table_6_coil_lacroix.tsv  table_6_helix_lacroix.tsv  table_7_Ccap_lacroix.tsv  table_7_Ncap_lacroix.tsv
tests/: test_energies.py  test_model.py  test_model_NSB_1994.py
