
[metadata]
name = pyagadir
version = 0.1.0
author = Alexander Reis
author_email = alex.camp.reis@gmail.com
url = 
description= A model of alpha-helical stability based on statistical mechanics.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = alpha-helix, biophysics, statistical mechanics, agadir, model 
license = 
classifiers = 
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
pytho_requires = >=3.10, <4
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    numpy >= 1.24.1
    pandas >= 1.5.2

[options.package_data]
pyagadir = data/*.csv
