
[metadata]
name = pyagadir
version = 1.0.1
author = Alexander Reis
author_email = alex.camp.reis@gmail.com
url = https://github.com/reisalex/AGADIR
description= A model of alpha-helical stability based on statistical mechanics.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = alpha-helix, biophysics, statistical mechanics, agadir, model 
license = "MIT"
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10, <4
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires = 
    numpy >= 1.24.1
    pandas >= 1.5.2
    pytest >= 8.1.1

[options.package_data]
pyagadir = data/*.csv